# velix

./: .env.example  .gitignore  ENGINEERING.md  LICENSE  NOTICE  README.md  STRK20_INTEGRATION_PLAN.md  Scarb.toml  app.js  index.html  package-lock.json  package.json  snfoundry.toml  styles.css  tsconfig.json  vite.config.js
api/: paymaster.js
backend/: .env.example  README.md  tsconfig.json
config/: veil-sepolia.js
contracts/: README.md  escrow.cairo  events.cairo  interfaces.cairo  lib.cairo  privacy.cairo  veil_encryption_key_registry.cairo
docs/: README.md  VEIL_ARCHITECTURE_LOCK.md  VEIL_E2E_TEST_PLAN.md  VEIL_PREPRODUCTION_STATUS.md  VEIL_SECURITY_BOUNDARIES.md  encrypted-channel-privacy.md  encryption-identity-architecture.md  experimental-stwo-prover.md  manual-two-device-encrypted-message-test.md  onchain-chat-testnet.md  privacy-pool-abi-analysis.md  privacy-pool-migration-report.md  privacy-pool-research-adapter.md  privacy-pool-source-analysis.md  production-onchain-messaging.md  session-key-architecture.md  strk20-integration-todo.md  veil-escrow-v1.md
examples/: veil-channel-demo.ts  veil-encrypted-channel-demo.ts  veil-onchain-chat-testnet.ts  veil-session-key-demo.ts
hooks/: index.ts
src/: README.md  app-runtime.js  escrow_interfaces.cairo  escrow_types.cairo  escrow_validation.cairo  lib.cairo  veil_channel_helper.cairo  veil_escrow.cairo
src-app/: app-runtime.js
tests/: indexer-client-privacy.test.mjs  (+12 more)
tools/privacy-set-viewing-key-poc/: Cargo.toml  PINS.md  README.md
tools/privacy-set-viewing-key-poc/src/: lib.rs  main.rs
(+291 files in other folders)
