[package]
name = "veil-privacy-poc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet-core = "0.16"
starknet-crypto = "0.8.1"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.13"
